test/conformance/chainsaw/validate/clusterpolicy/standard/variables/lazyload/conditions(deprecated)/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: preconditions
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
